Fix image source paths in index.html
Updated image source paths to remove 'images/' prefix.

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <div class="paper image">
   <p> I love you forever, jaan.❤️</p>
     <!-- <p>Love with You 😍 </p> -->
-   <img src="images/1.jpeg" />
+   <img src="1.jpeg" />
 </div>
 
 <div class="paper image">
   <p>“Your beauty doesn’t try to impress, <br> it simply exists — and that’s <br> what makes it unforgettable.” 💙</p>
-  <img src="images/2.jpeg" />
+  <img src=".jpeg" />
 </div>
 
 <div class="paper image">
   <p>With you, love feels calm and real. <br> You make me want to be better, <br> simply by being you. ❤️</p>
    <!-- <p> someone so cute ❤️ </p> -->
 
-  <img src="images/3.jpeg" />
+  <img src="3.jpeg" />
 </div>
 
 
